# SVO

./: CMakeLists.txt  LICENSE  README.md  dataK2.txt  runSVO.sh  setup.sh  test.cpp  text.txt
include/: camera.h  feature.h  rigid.h  stereo.h  system.h  utils.h
python/: Helper.py  dataK2.txt  main.py  mapping.py  rigid.py  tracker.py
src/: Helper.py  feature.cpp  main.cpp  result.txt  rigid.cpp  stereo.cpp  system.cpp  utils.cpp
src/Parameters/: LeftData.csv  RightData.csv  StereoData.csv
